--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstraptest",
+  "name": "customize-bootstrap-sass",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
