--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "bootstrap-sass": "^3.3.6",
+    "browser-sync": "^2.18.7",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0"
   }
